--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>Ruben Cecíl -- Web Development Agency</title>
 	<link rel="home" href="http://rubencecil.com" />
+	<link href="https://s3.amazonaws.com/rubencecil/favicon.ico" rel="icon" type="image/x-icon" />
 
 	<meta name="description" content="web developers, web development agency, web design, websites, web applications, freelance, freelance developers">
 	<meta name="keywords" content="">
