--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
 	<link rel="stylesheet" href="https://s3.amazonaws.com/rubencecil/style.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-	<script type="text/javascript" src="http://use.typekit.net/api4vns.js"></script>
+	<script type="text/javascript" src="https://s3.amazonaws.com/rubencecil/api4vns.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 	<style>
