--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<title>Ruben Cecíl -- Web Development Agency</title>
+	<title>Ruben Cecíl -- Web Agency</title>
 	<link rel="home" href="http://rubencecil.com" />
 	<link href="https://s3.amazonaws.com/rubencecil/favicon.ico" rel="icon" type="image/x-icon" />
 
@@ -61,8 +61,15 @@
 	</div>
 
 	</div>
-
-
-
 </body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-53769537-5', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
